# gold-lang-lsp

./: Cargo.toml  README.md  out.test
perf/lex/: perf.data  test.perf
perf/parse/: test.perf
src/: ast.rs  lexer.rs  main.rs  manager.rs  parser.rs  paser.rs  threadpool.rs  utils.rs
src/analyzer/: analyzers.rs  ast_walker.rs  method_analyzer.rs  mod.rs
src/analyzers/: ast_walker.rs  function_return_type_checker.rs  inout_param_checker.rs  mod.rs  unused_var_analyzer.rs  varybytearray_param_checker.rs
src/analyzers_v2/: annotated_ast_walker.rs  annotated_node.rs  ast_annotator.rs  inherited_checker.rs  mod.rs  naming_convention_checker.rs  symbol_table.rs  type_resolver.rs  unpurged_varbytearray_checker.rs
src/lexer/: mod.rs  tokens.rs
src/manager/: annotated_ast_walker.rs  annotated_node.rs  ast_annotator.rs  class_tree_service.rs  completion_service.rs  data_structs.rs  definition_service.rs  doc_symbol_generator.rs  document_service.rs  entity_tree_service.rs  mod.rs  naming_convention_checker.rs  semantic_analysis_service.rs  symbol_generator.rs  symbol_table.rs  type_hierarchy_service.rs  type_resolver.rs  unpurged_varbytearray_checker.rs  utils.rs
src/parser/: ast.rs  body_parser.rs  mod.rs  oql_parser.rs  utils.rs
test/: aNormalSizedClass.god  aTestClass.god  aTestEventMethod.god  aTestFunctionReturnTypeChecker.god  aTestOQL.god  aTestProc1.god  aTestProcCall.god  aTestTypes.god  aTestUnusedVar.god  aTestVarByteArrayParamChecker.god  initialize.json  shutdown.json  words.txt
test/scripts/: send.py
test_inputs/: aTestClass.god
(+25 files in other folders)
